units for max aged actor scenario

--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -3,4 +3,5 @@ akka.loglevel = DEBUG
 conviva {
   out-of-order-msg-timeout = 5m
   max-records = 100000 # 1M record per one actor
+  max-nr-of-aged-collectors = 10
 }
