added kafka integration

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -3,4 +3,7 @@ include "conviva.conf"
 akka {
   loglevel = DEBUG
 }
-
+kafka-broker = "localhost:9092"
+kafka-broker = ${?KAFKA_HOST}
+kafka-group = "conviva"
+kafka-topic = "events"
